# sicredi-data-engineering-test

./: .gitignore  .secrets.toml  README.md  docker-compose.yaml  pyproject.toml
.secrets/: .secrets.toml  settings.toml
src/: __main__.py  generate_fake_data.py  utils.py
src/console/: cli.py
src/console/commands/: __init__.py  commands.py  etl.py
src/database/: connection.py
src/database/models/: associado.sql
src/database/models/datalake/: associado.sql  cartao.sql  conta.sql  create.py  create_schema.sql  movimento.sql
src/pipelines/: prepare.py  user_etl.py
tests/: test_core.py
