[tool.poetry]
name = "sicredi-data-engineer-test"
version = "0.1.0"
description = "Test for Data Engineer role at Sicredi."
authors = ["Marcos Martins <contato@marcosmartins.me>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.2.1"
psycopg2 = "^2.9.3"
dynaconf = "^3.1.8"
numpy = "^1.22.3"
cleo = "^0.8.1"
Faker = "^13.11.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"

[tool.coverage.run]
omit = [
    '*/__init__.py'
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
